--- a/sample/AndroidPunkTest/res/values/strings.xml
+++ b/sample/AndroidPunkTest/res/values/strings.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, AndroidPunkTestActivity!</string>
-    <string name="app_name">AndroidPunkTest</string>
+    <string name="app_name">AndroidPunk Jumper</string>
 </resources>
