Lots of changes.
Fixed CanvasGraphic when changing size of underlying
bitmap often. 
Added menu sample with some tweening graphics. Really cool
stuff. 
Added ICS HOLO theme where supported.
Added OnBackCallback for when user hits the back button. Need to move
this to FP.onbackcallback or something.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="hello">Hello World!</string>
     <string name="app_name">AndroidPunk</string>
+    <string name="exit_dialog_title">Exit?</string>
+    <string name="exit_dialog_message">Do you want to exit the game?</string>
+    
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 
 </resources>
